--- a/assessment.css
+++ b/assessment.css
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="assessment.css">
-  <title>あなたのいいところ診断</title>
-</head>
-<body>
-  <h1>あなたのいいところは?</h1>
-  <p>診断したい名前を入れて下さい</p>
-  <input type="text" id="user-name" size="40" maxlength="20">
-  <button id="assessment">診断する</button>
-  <div id="result-area"></div>
-  <div id="tweet-area">
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  </div>
-  <script src="assessment.js"></script>
-</body>
-</html>
+body{
+    background: linear-gradient(-135deg, #E4A972, #9941D8);
+    color: #FDFFFF;
+    width: 500px;
+    margin-right: auto;
+    margin-left : auto;
+}
+button {
+    padding: 5px 20px;
+    background-color: aquamarine;
+    border-style: none;
+  }
+  input{
+      height: 23.5px;
+  }
